# verifysign

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/macos/: context.rs  mod.rs  sec_sys.rs
src/windows/: context.rs  mod.rs  wintrust_sys.rs
