[package]
name = "verifycode"
version = "0.1.3"
description = "A rust cargo used to verify digital code signature on files."
authors = ["Vlad Krasnov <vlad@cloudflare.com>","I-Alzamil <easysekker@gmail.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/vkrasnov/codesign-verify-rs"
keywords = ["macos", "windows", "code", "signature", "authenticode", "verify"]

[dependencies]
sha2 = "0.10"
sha-1 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
                                        "Win32_Foundation",
                                        "Win32_Storage_FileSystem",
                                        "Win32_System_Threading",
                                        "Win32_Security",
                                        "Win32_Security_WinTrust",
                                        "Win32_Security_Cryptography",
                                        "Win32_Security_Cryptography_Catalog",
                                        "Win32_Security_Cryptography_Sip"
                                    ] }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
