[package]
# Forked from codesign-verify-rs in 22/02/2025 credit to Vlad Krasnov <vlad@cloudflare.com>
name = "verifysign"
version = "0.2.1"
description = "A rust cargo used to verify digital code signature on files."
authors = ["Vlad Krasnov <vlad@cloudflare.com>","I-Alzamil <easysekker@gmail.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/I-Alzamil/verifysign"
keywords = ["macos", "windows", "code", "signature", "authenticode"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
sha2 = "0.10"
sha1 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
                                        "Win32_Foundation",
                                        "Win32_Storage_FileSystem",
                                        "Win32_System_Threading",
                                        "Win32_Security",
                                        "Win32_Security_WinTrust",
                                        "Win32_Security_Cryptography",
                                        "Win32_Security_Cryptography_Catalog",
                                        "Win32_Security_Cryptography_Sip"
                                    ] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
